src/dialog/snapshots/tvision__dialog__filedlg__tests__snapshot_chdir_dialog.snap
---
source: src/dialog/filedlg.rs
assertion_line: 4937
expression: screen.snapshot()
---
size: 64x20
cursor: hidden
text:
|                                                                |
|                                                                |
|                ┌────────────── Change Directory ──────────────┐|
|                │                                              │|
|                │  Directory name                              │|
|                │   /home/user                            ▐↓▌  │|
|                │                                              │|
|                │  Directory tree                              │|
|                │   └─┬/                        ▲      OK   ▄  │|
|                │     └─┬home                   ▓    ▀▀▀▀▀▀▀▀  │|
|                │       └─┬user                 ▓              │|
|                │         └┬─projects           ▓    Chdir  ▄  │|
|                │          └─src                ▓    ▀▀▀▀▀▀▀▀  │|
|                │                               ▓              │|
|                │                               ▓    Revert ▄  │|
|                │                               ▓    ▀▀▀▀▀▀▀▀  │|
|                │                               ▓              │|
|                │                               ▼     Help  ▄  │|
|                │                                    ▀▀▀▀▀▀▀▀  │|
|                └──────────────────────────────────────────────┘|
attr:
|................................................................|
|................................................................|
|................aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa|
|................aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa|
|................aabbbbbbbbbbbcbbbaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa|
|................aaaddddddddddddddddddddddddddddddddddddddddedaaa|
|................aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa|
|................aabbbbbbbbbbbcbbbaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa|
|................aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaafaabgggghgggbaaa|
|................aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaafaabbbbbbbbbbaaa|
|................aaaiiiiiiiiiiiiiiiiiiiiiiiiiiiiifaaaaaaaaaaaaaaa|
|................aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaafaabghggggggbaaa|
|................aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaafaabbbbbbbbbbaaa|
|................aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaafaaaaaaaaaaaaaaa|
|................aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaafaabghggggggbaaa|
|................aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaafaabbbbbbbbbbaaa|
|................aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaafaaaaaaaaaaaaaaa|
|................aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaafaabgghgggggbaaa|
|................aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabbbbbbbbbbaaa|
|................aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa|
legend:
  . default
  a fg=BIOS(7) bg=BIOS(1)
  b fg=BIOS(0) bg=BIOS(7)
  c fg=BIOS(4) bg=BIOS(7)
  d fg=BIOS(0) bg=BIOS(3)
  e fg=BIOS(14) bg=BIOS(3)
  f fg=BIOS(1) bg=BIOS(3)
  g fg=BIOS(0) bg=BIOS(2)
  h fg=BIOS(14) bg=BIOS(2)
  i fg=BIOS(15) bg=BIOS(1)
