src/dialog/snapshots/tvision__dialog__filedlg__tests__snapshot_file_dialog.snap
---
source: src/dialog/filedlg.rs
expression: screen.snapshot()
---
size: 64x20
cursor: hidden
text:
|                                                                |
|               ┌───────────────── Open a File ─────────────────┐|
|               │                                               │|
|               │  Name                                         │|
|               │   *.rs                       ▐↓▌    Open   ▄  │|
|               │                                    ▀▀▀▀▀▀▀▀▀  │|
|               │  Files                                        │|
|               │   lib.rs        │                  Cancel  ▄  │|
|               │   main.rs       │                  ▀▀▀▀▀▀▀▀▀  │|
|               │   src/          │                             │|
|               │   ../           │                             │|
|               │                 │                             │|
|               │                 │                             │|
|               │                 │                             │|
|               │                 │                             │|
|               │  ◄▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓►              │|
|               │                                               │|
|               │ /fixture/*.rs                                 │|
|               │                                               │|
|               └───────────────────────────────────────────────┘|
attr:
|................................................................|
|...............aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa|
|...............aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa|
|...............aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa|
|...............aaabbbbbbbbbbbbbbbbbbbbbbbbbbbbbcbaaddeddddddaaaa|
|...............aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa|
|...............aaafaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa|
|...............aaaggggggggggggggghhhhhhhhhhhhhhhhaadddddddddaaaa|
|...............aaahhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhaaaaaaaaaaaaaaa|
|...............aaahhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhaaaaaaaaaaaaaaa|
|...............aaahhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhaaaaaaaaaaaaaaa|
|...............aaahhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhaaaaaaaaaaaaaaa|
|...............aaahhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhaaaaaaaaaaaaaaa|
|...............aaahhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhaaaaaaaaaaaaaaa|
|...............aaahhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhaaaaaaaaaaaaaaa|
|...............aaaiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiaaaaaaaaaaaaaaa|
|...............aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa|
|...............ajjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjja|
|...............ajjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjja|
|...............aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa|
legend:
  . default
  a fg=BIOS(0) bg=BIOS(7)
  b fg=BIOS(0) bg=BIOS(3)
  c fg=BIOS(14) bg=BIOS(3)
  d fg=BIOS(0) bg=BIOS(2)
  e fg=BIOS(14) bg=BIOS(2)
  f fg=BIOS(4) bg=BIOS(7)
  g fg=BIOS(15) bg=BIOS(1)
  h fg=BIOS(7) bg=BIOS(1)
  i fg=BIOS(1) bg=BIOS(3)
  j fg=BIOS(3) bg=BIOS(1)
